fixed settings message text alignment to right

--- a/qencode5-portal/css/q7__template.css
+++ b/qencode5-portal/css/q7__template.css
@@ -4629,6 +4629,7 @@ input:not(:checked) + .q6-switch__slider + .q6-switch__text .q6-switch__text--of
     font-weight: 400;
     font-size: 14px;  
     color: #6e6e6e;  
+    text-align: right;
 }
 
 .q7-advanced-settings__row .q7-input.q7-input--in-row {
